--- a/Test/hyd-buffet-deals.html
+++ b/Test/hyd-buffet-deals.html
@@ -63,27 +63,20 @@
             </div>
         </nav>
     </section>
-
-
-
-    <section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-rdgo2viUWA">
+    <section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-rdgo2viUWA" id="header3-q">
 
 
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 100%;">
-                    <img src="assets/images/hotel-jubilee-ridge.jpg" alt="Mobirise">
+                    <img src="assets/images/01.jpg" alt="Mobirise">
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Hotel Jubilee Ridge</h1>
 
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Best Western Jubilee Ridge is a 3-star luxury hotel in Kavuri Hills, Madhapur.
-                            <br>
-                            <br>Cuisines - North Indian, Chinese and South Indian
-                            <br>Location - Madhapur
-                            <br>Call-37837987w89
+                            Best Western Jubilee Ridge is a 3-star luxury hotel in Kavuri Hills, Madhapur. This place gives you a combination of space and functionality. It is a 10-minute drive from all the major business and shopping hubs and a short 2km from HITEC City. The hotel boasts of contemporary architecture. Flavours - Best Western Jubilee Ridge is the in-house restaurant in Best Western Jubilee Ridge and serves palatable North Indian, Chinese and South Indian cuisines. The interiors are well-decorated and has a fine dining<br>Call-37837987w89
                         </p>
                     </div>
                     <div class="mbr-section-btn">
@@ -94,27 +87,20 @@
             </div>
         </div>
     </section>
-
-
-
-    <section class="header3 cid-rdgo4tVw8S">
+    <section class="header3 cid-rdgo4tVw8S" id="header3-r">
 
 
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 100%;">
-                    <img src="assets/images/beyond-flavours.jpg" alt="Mobirise">
+                    <img src="assets/images/01.jpg" alt="Mobirise">
                 </div>
                 <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Beyond Flavours</h1>
+                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Hotel Jubilee Ridge</h1>
 
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Beyond Flavours is a 3-star luxury hotel in Kavuri Hills, Madhapur.
-                            <br>
-                            <br>Cuisines - Chinese, Continental, Kebab, European, South Indian, North Indian
-                            <br>Location - Gachibowli
-                            <br>Call-37837987w89
+                            Best Western Jubilee Ridge is a 3-star luxury hotel in Kavuri Hills, Madhapur. This place gives you a combination of space and functionality. It is a 10-minute drive from all the major business and shopping hubs and a short 2km from HITEC City. The hotel boasts of contemporary architecture. Flavours - Best Western Jubilee Ridge is the in-house restaurant in Best Western Jubilee Ridge and serves palatable North Indian, Chinese and South Indian cuisines. The interiors are well-decorated and has a fine dining
                         </p>
                     </div>
                     <div class="mbr-section-btn">
@@ -125,67 +111,6 @@
             </div>
         </div>
     </section>
-
-
-
-    <section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-rdgo2viUWA">
-
-
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 100%;">
-                    <img src="assets/images/swadesh.jpg" alt="Mobirise">
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Swadesh</h1>
-
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        Swadesh is a 3-star luxury hotel in Kavuri Hills, Madhapur.
-                        <br>
-                        <br>Cuisines - North Indian, South Indian, Continental, Biryani, Asian
-                        <br>Location - Gachibowli
-                        <br>Call-37837987w89
-                    </div>
-                    <div class="mbr-section-btn">
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">Veg -600</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">NonVeg -700</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section class="header3 cid-rdgo4tVw8S">
-
-
-        <div class="container">
-            <div class="media-container-row">
-                <div class="mbr-figure" style="width: 100%;">
-                    <img src="assets/images/khaansaab.jpg" alt="Mobirise">
-                </div>
-                <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Khaansaab</h1>
-
-                    <div class="mbr-section-text mbr-white pb-3 ">
-                        Beyond Flavours is a 3-star luxury hotel in Kavuri Hills, Madhapur.
-                        <br>
-                        <br>Cuisines - North Indian, Mughlai
-                        <br>Location - Gachibowli
-                        <br>Call-37837987w89
-                    </div>
-                    <div class="mbr-section-btn">
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">Veg -600</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">NonVeg -700</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
 
     <section class="cid-rdgur6kw1o" id="footer1-v">
 
@@ -195,10 +120,10 @@
                 <div class="col-12 col-md-3">
                     <span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn" style="font-size:4rem"></span>
                     <!--<div class="media-wrap">
-                        <a href="https://mobirise.com/">
-                            <img src="assets/images/logo2-1.png" alt="Mobirise">
-                        </a>
-                    </div>-->
+        <a href="https://mobirise.com/">
+            <img src="assets/images/logo2-1.png" alt="Mobirise">
+        </a>
+    </div>-->
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
