--- a/Test/index.html
+++ b/Test/index.html
@@ -50,18 +50,26 @@
                     </span>
                 </div>
             </div>
-           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-                    <li class="nav-item">
-                        <a class="nav-link link text-white display-4" href="index.html">Home &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                    <li class="nav-item" >
+                        <a class="nav-link link text-white display-4" href="index.html">
+                            Home
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link text-white display-4" href="hyd-buffet-deals.html">
-                            Hyderabad &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+                        <a class="nav-link link text-white display-4"  href="hyd-buffet-deals.html">
+                            Hyderabad
                         </a>
                     </li>
                 </ul>
+                <div class="navbar-buttons mbr-section-btn">
+                    <!--<a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+                        <span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
 
+                        Try It Now!
+                    </a>-->
+                </div>
             </div>
         </nav>
     </section>
@@ -74,24 +82,8 @@
                     <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">BEST GROUP BUFFET DEALS</h1>
 
                     <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                        WHAT WE OFFER...<br>1) Minimum 10 percent flat off on invoice. If you are a group of min 15+ and you plan to go ahead
-                        with our partner restaurant you get instant 10 percent flat discount on the full invoice. For eg the bill is Rs40,000
-                        as per the discount of 10% you only need to pay Rs36,000. Also you will get additional confirmed rewards post availing the reservation.<br>
-                        2) Customer has the option to customize the full buffet pack. The prices mentioned for buffet are per person inclusive all of the taxes.<br>
-                        3) We have ourselves customized buffet plans for each restaurant. We helped them make best buffet plans which includes maximum
-                        variety and lowest possible price. So as a group you dont have to negotiate for more items and less price with the restaurant as
-                        the same is already taken care by us to best extent. More items can be added as per customer by paying extra cost.<br>
-                        4) There were some restaurants who never served buffet. Being our partner they have entered into buffet space. So now you have more
-                        options than ever.<br>
-                        5) We are partners with only 4+ rating resturants in taste/variety/ambience. Hopefully, you wont get a chance to complain on the same.
-                        All the offers mentioned are valid on all the dates including major holidays like<br>25th Dec/31th Dec.<br>
-                        6) There are no hidden terms and conditions for 10 percent instant discount, all you need is 15+ group to avail the same and reservation
-                        via us.<br>
-                        7) In case you have done booking for 16 people and last moment you end up with 14 people, still flat 10 percent instant will be
-                        applicable however additional confirmed rewards wont be processed as the same needs atleast 15 people to be elligble.<br>
-                        <!--8) You can check our existing partners by checking your city specific link and then email us on sales@awesomedeals.co.in or drop a
-                        whatsapp message on 9872767456 for further information.<br>&nbsp;<br>-->
-                        8) Email us on sales@awesomedeals.co.in or drop a whatsapp message on 9872767456 for further information.<br>&nbsp;<br>
+                        WHAT WE OFFER...<br>1) Minimum 10 percent flat off on invoice. If you are a group of min 15+ and you plan to go ahead with our partner restaurant you get instant 10 percent flat discount on the full invoice. For eg the bill is Rs40,000 as per the discount of 10% you only need to pay Rs36,000. Also you will get 2% cashback on the paid amount of Rs36,000 post availing the reservation.<br>2) Customer has the option to customize the full buffet pack. The prices mentioned for buffet per person inclusive all of the taxes.<br>2) We have ourselves customized buffet plans for each restaurant. We helped them make best buffet plans which includes maximum variety and lowest possible price. So as a group you dont have to negotiate for more items and less price with the restaurant as the same is already taken care by us to best extent. More items can be added as per customer by paying extra cost.<br>3) There were some restaurants who never served buffet. Being our partner they have entered into buffet space. So now you have more options than ever.<br>4) We are partners with only 4+ rating resturants in taste/variety/ambience. Hopefully, you wont get a chance to complain on the same. All the offers mentioned are valid on all the dates including major holidays like
+                        <br>25th Dec/31th Dec.<br>5)&nbsp;There are no hidden terms and conditions for 10 percent instant discount, all you need is 15+ group to avail the same and reservation via us.<br>7)&nbsp;In case you have done booking for 16 people and last moment you end up with 14 people, still flat 10 percent instant will be applicable however 2 percent cashback wont be processed as the same needs atleast 15 people to be elligble.<br>8) You can check our existing partners by checking your city specific link and then email us on sales@awesomedeals.co.in or drop a whatsapp message on 9872767456 for further information.<br>&nbsp;<br>
                     </p>
 
                 </div>
